--- a/Shivalik23/A Story3-financial-prudence.html
+++ b/Shivalik23/A Story3-financial-prudence.html
@@ -54,7 +54,7 @@
           <li class="dropdown"><a href="#"><span>Strategic Report</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about Shivalik.html">At a Glance</a></li>
-              <li><a href="chairman_msg.html">Chairman’s Message</a></li>
+              <li><a href="shivalik_chairman-message.html">Chairman’s Message</a></li>
               <li><a href="A Story1-empowering Energy.html"><b>Empowering Energy Management:</b> The Criticality of SBCL’s Components</a></li>
               <li><a href="A Story2-forging_Future.html"><b>Forging the Future:</b> SBCL’s Technological Prowess and Intellectual Capital</a></li>
 				
@@ -565,4 +565,4 @@ the previous year.</p>
 
 </body>
 
-</html>>>
+</html>>>>
