--- a/Shivalik23/index.html
+++ b/Shivalik23/index.html
@@ -120,9 +120,7 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <!--<h1 class="logo me-auto"><a href="index.html">Sailor</a></h1>-->
-      <!-- Uncomment below if you prefer to use an image logo -->
-       <!--  <a href="index.html" class="logo me-auto"><img src="assets/img/logoSBI.png" alt="" class="img-fluid"></a>-->
+      
        <a href="index.html" class="logo me-auto"><img src="assets/shivalikImages/Shivalik-Logo2.jpg" class="img-fluid" alt=""></a>
 
       <nav id="navbar" class="navbar navbar_smm">
@@ -132,7 +130,7 @@
           <li class="dropdown"><a href="#"><span>Strategic Report</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about Shivalik.html">At a Glance</a></li>
-              <li><a href="chairman_msg.html">Chairman’s Message</a></li>
+              <li><a href="shivalik_chairman-message.html">Chairman’s Message</a></li>
               <li><a href="A Story1-empowering Energy.html"><b>Empowering Energy Management:</b> The Criticality of SBCL’s Components</a></li>
               <li><a href="A Story2-forging_Future.html"><b>Forging the Future:</b> SBCL’s Technological Prowess and Intellectual Capital</a></li>
 				
