--- a/index.html
+++ b/index.html
@@ -153,18 +153,18 @@
 
           <li class="dropdown"><a href="#"><span>Statutory Reports</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Management Discussion &amp; Analysis</a></li>
-              <li><a href="#">Directors’ report</a></li>
-              <li><a href="#">Corporate Governance Report</a></li>
-              <li><a href="#">Business Responsibilty &amp; Sustainability Report</a></li>
+              <li><a target="_blank" href="assets/PDF/09-MDA.pdf">Management Discussion &amp; Analysis</a></li>
+              <li><a target="_blank" href="assets/PDF/10-Directors’ report.pdf">Directors’ report</a></li>
+              <li><a target="_blank" href="assets/PDF/11-Corporate Governance Report.pdf">Corporate Governance Report</a></li>
+              <li><a target="_blank" href="assets/PDF/12-Business Responsibilty & Sustainability Report.pdf">Business Responsibilty &amp; Sustainability Report</a></li>
             </ul>
           </li>
 
           <li class="dropdown"><a href="#"><span>Financial Statements</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Standalone Financial Statements</a></li>
-              <li><a href="#">Consolidated Financial Statements</a></li>
-              <li><a href="#">Notice to Shareholders</a></li>
+              <li><a target="_blank" href="assets/PDF/13-Standalone Financial Statements.pdf">Standalone Financial Statements</a></li>
+              <li><a target="_blank" href="assets/PDF/14-Consolidated Financial Statements.pdf">Consolidated Financial Statements</a></li>
+              <li><a target="_blank" href="assets/PDF/15-Notice to Shareholders.pdf">Notice to Shareholders</a></li>
             </ul>
           </li>
           <!-- <li><a href="services.html">Menu</a></li>
@@ -242,6 +242,7 @@
               <h2 class="animate__animated animate__fadeInDown smm_hero_h2 border_btm_smm_hero">The Electrification Era</h2>
               <p class="animate__animated animate__fadeInUp">Shivalik Bimetal Controls Ltd. - at the Vanguard of the World’s Sustainable Progress</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+				<a target="_blank" href="assets/PDF/Shivalik_AR2023_-_Final_File.pdf" class="download_pdf_hm_slider btn-get-started animate__animated animate__fadeInUp scrollto">Download Annual Report</a>
             </div>
           </div>
         </div>
