--- a/shivalik_download_pdf.html
+++ b/shivalik_download_pdf.html
@@ -89,18 +89,18 @@
 
           <li class="dropdown"><a href="#"><span>Statutory Reports</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Management Discussion &amp; Analysis</a></li>
-              <li><a href="#">Directors’ report</a></li>
-              <li><a href="#">Corporate Governance Report</a></li>
-              <li><a href="#">Business Responsibilty &amp; Sustainability Report</a></li>
+              <li><a target="_blank" href="assets/PDF/09-MDA.pdf">Management Discussion &amp; Analysis</a></li>
+              <li><a target="_blank" href="assets/PDF/10-Directors’ report.pdf">Directors’ report</a></li>
+              <li><a target="_blank" href="assets/PDF/11-Corporate Governance Report.pdf">Corporate Governance Report</a></li>
+              <li><a target="_blank" href="assets/PDF/12-Business Responsibilty & Sustainability Report.pdf">Business Responsibilty &amp; Sustainability Report</a></li>
             </ul>
           </li>
 
           <li class="dropdown"><a href="#"><span>Financial Statements</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Standalone Financial Statements</a></li>
-              <li><a href="#">Consolidated Financial Statements</a></li>
-              <li><a href="#">Notice to Shareholders</a></li>
+              <li><a target="_blank" href="assets/PDF/13-Standalone Financial Statements.pdf">Standalone Financial Statements</a></li>
+              <li><a target="_blank" href="assets/PDF/14-Consolidated Financial Statements.pdf">Consolidated Financial Statements</a></li>
+              <li><a target="_blank" href="assets/PDF/15-Notice to Shareholders.pdf">Notice to Shareholders</a></li>
             </ul>
           </li>
           <!-- <li><a href="services.html">Menu</a></li>
@@ -173,35 +173,35 @@
     <tbody>
         <tr>
             <td>At a Glance</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/01-At a Glance.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Chairman’s Message</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/02-Chairman’s Message.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td><b>Empowering Energy Management:</b> The Criticality of SBCL’s Components</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/03-Empowering Energy Management.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td><b>Forging the Future:</b> SBCL’s Technological Prowess and Intellectual Capital</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/04-Forging the Future.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td><b>Financial Prudence:</b> SBCL’s Balance Sheet Strength</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/05-Financial Prudence.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Our Portfolio</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/06-Our Portfolio.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Key Performance Indicators</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/07-Key Performance.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Corporate Information</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/08-Corporate Information.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
 		<tr>
             <td class="td_no_border_downd_pdf"><p></p></td>
@@ -213,19 +213,19 @@
 		
         <tr>
             <td>Management Discussion &amp; Analysis</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/09-MDA.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Directors’ report</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/10-Directors’ report.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Corporate Governance Report</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/11-Corporate Governance Report.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Business Responsibilty &amp; Sustainability Report</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/12-Business Responsibilty & Sustainability Report.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
 		
 		<tr>
@@ -237,15 +237,15 @@
         </tr>
         <tr>
             <td>Standalone Financial Statements</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/13-Standalone Financial Statements.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Consolidated Financial Statements</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/14-Consolidated Financial Statements.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
         <tr>
             <td>Notice to Shareholders</td>
-			<td><a class="dwn_pdf_anchor_tag" href="#"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
+			<td><a class="dwn_pdf_anchor_tag" target="_blank" href="assets/PDF/15-Notice to Shareholders.pdf"><p class="shivalik_para_smm down_pdf_icon text_align_right">Download <img src="assets/shivalikImages/PDF-icon.png" class="img-fluid" alt=""></p></a></td>
         </tr>
 		
         <!-- Add more rows as needed -->
