--- a/about Shivalik.html
+++ b/about Shivalik.html
@@ -126,9 +126,9 @@
     <section id="about" class="about about_background_img story_pages_div_smm_shivalik">
       <div class="container" style="background-color: rgba(000, 0, 0, 0.5);">
           <div class="page_title_inside_pages animate__animated animate__zoomInRight">
-            <h3>Galvanizing</h3>
+           
             <div>
-            <h2><span class="title_hr">The Electrification Era</span></h2>
+             <h3></h3><h2 class="title_hrd"><span style="font-weight: 500;">Galvanizing</span> <span class="title_hr">The Electrification Era</span></h2>
           </div>
             <p>Shivalik Bimetal Controls Ltd. - at the Vanguard of the World’s Sustainable Progress</p>
           </div>
