--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
         <div class="carousel-item active" style="background-image: url(assets/shivalikImages/banner1.jpg)">
           <div class="carousel-container">
             <div class="container smm_container_hero">
-				<h3>Galvanizing</h3>
-              <h2 class="animate__animated animate__fadeInDown smm_hero_h2 border_btm_smm_hero">The Electrification Era</h2>
+				<div><!--<h3>Galvanizing</h3>-->
+              <h2 class="animate__animated animate__fadeInDown smm_hero_h2 border_btm_smm_hero"><span class="galvanzing" style="font-weight: 500;">Galvanizing</span> The Electrification Era</h2></div>
               <p class="animate__animated animate__fadeInUp">Shivalik Bimetal Controls Ltd. - at the Vanguard of the World’s Sustainable Progress</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="about Shivalik.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
 				<a target="_blank" href="assets/PDF/Shivalik_AR2023_-_Final_File.pdf" class="download_pdf_hm_slider btn-get-started animate__animated animate__fadeInUp scrollto">Download Annual Report</a>
             </div>
           </div>
@@ -253,7 +253,7 @@
             <div class="container smm_container_hero">
               <h2 class="animate__animated animate__fadeInDown smm_hero_h2_btm_zero">Empowering Energy <br>Management:</h2>
               <p class="animate__animated animate__fadeInUp smm_para_hero" style="text-shadow: 1px 1px 1px #000;">The Criticality of SBCL’s Components</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="A Story1-empowering Energy.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
@@ -264,7 +264,7 @@
             <div class="container smm_container_hero">
               <h2 class="animate__animated animate__fadeInDown smm_hero_h2_btm_zero">Forging the Future:</h2>
               <p class="animate__animated animate__fadeInUp smm_para_hero" style="text-shadow: 1px 1px 1px #000;">SBCL’s Technological Prowess and Intellectual Capital</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="A Story2-forging_Future.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
@@ -275,7 +275,7 @@
             <div class="container smm_container_hero">
               <h2 class="animate__animated animate__fadeInDown smm_hero_h2_btm_zero">Financial Prudence:</h2>
               <p class="animate__animated animate__fadeInUp smm_para_hero" style="text-shadow: 1px 1px 1px #000;">SBCL’s Balance Sheet Strength</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="A Story3-financial-prudence.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
@@ -335,7 +335,7 @@ components has positioned us at the forefront of
 this transformative journey, enabling reliable and 
 efficient energy management across industries 
 and homes. </p>
-			  	<p><a href="#" class="btn_Read_More">Read More</a></p>
+			  	<p><a href="shivalik_chairman-message.html" class="btn_Read_More">Read More</a></p>
 			  	<p></p>
 			  	<p></p>
 			  </div>
