--- a/shivalik_chairman-message.html
+++ b/shivalik_chairman-message.html
@@ -143,7 +143,7 @@
 			  		<img src="assets/shivalikImages/hM/Chairman_hm.jpg" class="img-fluid" alt="">
 					  </p>
 			  </div>
-			<div class="col-lg-4 mb-4 pt-4 pt-lg-0 animate__animated animate__zoomIn">
+			<div class="col-lg-4 mb-4 pt-4 pt-lg-0 animate__animated animate__zoomIn small_half_width_chir_pg">
 				<div>
 					<h3>Dear Shareholders,</h3>
 					<p class="shivalik_para_smm">
@@ -156,7 +156,7 @@ advancements, financial prudence, commitment
 to sustainable growth, and our dedication to 
 creating long-term value
 					  </p>
-					<p class="shivalik_para_smm">In FY23, SBCL has achieved significant 
+					<p class="shivalik_para_smm hide_tab_smm">In FY23, SBCL has achieved significant 
 milestones, driven by our focus on empowering 
 energy management. As the world embraces 
 the global wave towards electrification, 
@@ -170,7 +170,16 @@ and homes.</p>
 				</div>
 				  
 			  </div>
-			<div class="col-lg-12 mb-4 animate__animated animate__zoomIn">
+			<div class="col-lg-12 mb-4 animate__animated animate__zoomIn big_full_width_chir_pg">
+				<p class="shivalik_para_smm hide_desktop_smm">In FY23, SBCL has achieved significant 
+milestones, driven by our focus on empowering 
+energy management. As the world embraces 
+the global wave towards electrification, 
+our comprehensive portfolio of electrical 
+components has positioned us at the forefront of 
+this transformative journey, enabling reliable and 
+efficient energy management across industries 
+and homes.</p>
 				
 					<p class="shivalik_para_smm">SBCL remains committed to driving innovation in 
 an ever-evolving world. Our strong partnerships 
